--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,900&family=Lobster&family=Press+Start+2P&display=swap');
+
 .marksDisplay {
     display: flex;
     justify-content: space-evenly;
-    border: 3px solid green;
+    font-family: 'Exo 2', sans-serif;
+    /* border: 3px solid green; */
+    padding: 30px;
 }
+
 
 .images {
     display: flex;
@@ -13,21 +18,105 @@
 .leftImgS , .rightImgS{
     height: auto;
     width: 180px;
-    border: 3px solid green;
+    /* border: 3px solid green; */
 }
 
 .body{
     background-color: antiquewhite;
+    margin: 0;
 }
 
 .buttons{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 3px solid green;
+    /* border: 3px solid green; */
+    padding-top: 50px;
+    
 }
 
 .playerMarksCounter , .computerMarksCounter{
-    border: 3px solid green;
+    /* border: 3px solid green; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.intro{
+    text-align: center;
+    font-family: 'Exo 2', sans-serif;
+}
+
+.buttonCss {
+    background-color: #222;
+    border-radius: 4px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    margin: 0;
+    max-width: 150px;
+    min-height: 44px;
+    min-width: 10px;
+    outline: none;
+    overflow: hidden;
+    padding: 9px 20px 8px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+  }
+  
+  .buttonCss:hover,
+  .buttonCss:focus {
+    opacity: .75;
+  }
+
+  .divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
+}
+
+.footer{
+    font-family: 'Exo 2', sans-serif;
+    color: white;
+    background: black;
+    text-align: center;
+    padding: 3px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+}
+
+.footerFlex {
+    display: flex;
+    justify-content: center;
+}
+
+.githubLogo{
+    width: 32px;
+    height: 32px;
+    padding-left: 10px;
     
+}
+
+.footerIcon{
+    align-self: center;
+}
+
+.line{
+    height: 5px;
+    /* border: 3px solid green; */
+    background-color: black;
+
 }
